# CA_labs

./: .gitignore  README.md
Lab_1/: .gitignore  CMakeLists.txt  main.cpp
Lab_2/: .gitignore  ArrayCounterTask.cpp  ArrayCounterTask.h  CMakeLists.txt  DynamicQueue.cpp  DynamicQueue.h  LabMenu.cpp  LabMenu.h  MutexFixedSizeQueue.cpp  MutexFixedSizeQueue.h  QueueTask.cpp  QueueTask.h  TaskExecutor.cpp  TaskExecutor.h  main.cpp  queue.cpp  queue.h  task_2.cpp
Lab_2/Results/: Results.txt
Lab_2/src/: DynamicQueue.cpp  DynamicQueue.h  QueueTask.cpp  TaskExecutor.cpp  queue.h
Lab_3/: CMakeLists.txt  main.cpp
Lab_3/results/: results.txt
